--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,35 @@
-<ion-header [translucent]="true">
+<ion-header >
   <ion-toolbar>
     <ion-title>
-      Blank
+      Recommend Movies
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content style="background-color: gainsboro;" [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Movie Recommendation</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div style="margin-top: 10px" class="searchRow">
+    <ion-input style="background-color: lightblue;" placeholder="Enter Movie Name" [(ngModel)]="MovieName"></ion-input>
+    <div style="display: flex;justify-content: space-evenly;">
+      <ion-button style="width: 40%" (click)="getRecommend()">
+          Search
+      </ion-button>
+      <ion-button style="width: 40%" (click)="clearField()">
+          Clear
+      </ion-button>
+    </div>
   </div>
+  <div *ngIf="recommentList.length !== 0">
+    <ion-list *ngFor="let item of recommentList">
+      <ion-item>
+        <ion-label>{{item.title}}</ion-label>
+      </ion-item>
+    </ion-list>
+  </div>
+
 </ion-content>
